<resources>
    <string name="app_name">Sailor Moon Quiz</string>
    <string name="question_one">¤ What is the name of the main character</string>
    <string name="first_answer_a">Rei</string>
    <string name="first_answer_b">Usagi</string>
    <string name="first_answer_c">Minako</string>
    <string name="results_button">See your results</string>
    <string name="question_two">¤ Who is the first one to join the sailor team after Sailor Moon</string>
    <string name="second_answer_a">Sailor Mercury</string>
    <string name="second_answer_b">Sailor Jupiter</string>
    <string name="second_answer_c">Sailor Mars</string>
    <string name="question_three">¤ How many cats are there in Sailor Moon</string>
    <string name="third_answer_a">1</string>
    <string name="third_answer_b">2</string>
    <string name="third_answer_c">3</string>
    <string name="question_four">¤ Which Sailor is the Guardian of the Door of Time and Space</string>
    <string name="forth_answer_a">Sailor Saturn</string>
    <string name="forth_answer_b">Sailor Pluto</string>
    <string name="forth_answer_c">Sailor Venus</string>
    <string name="question_five">¤ Which magical creature is the ally of Sailor Moon in Sailor Moon SuperS</string>
    <string name="fifth_answer_a">Mermaid</string>
    <string name="fifth_answer_b">Dragon</string>
    <string name="fifth_answer_c">Pegasus</string>
    <string name="question_six">¤ Which of the following is the leader of the Dead Moon Circus</string>
    <string name="sixth_answer_a">Prince Demande</string>
    <string name="sixth_answer_b">Queen Beryl</string>
    <string name="sixth_answer_c">Queen Nehelenia</string>
    <string name="question_seven">¤ This crystal contains the life force of a person </string>
    <string name="question_eight">¤ He is the reincarnation of Prince Endymion and Usagi\'s true love</string>
    <string name="question_nine">¤ Which of the following belong to the Outer Sailor Scouts</string>
    <string name="ninth_answer_a">Sailor Neptune</string>
    <string name="ninth_answer_b">Sailor Mars</string>
    <string name="ninth_answer_c">Sailor Saturn</string>
    <string name="ninth_answer_d">Sailor Uranus</string>
    <string name="question_ten">¤ Which of the following girls have talent in music</string>
    <string name="tenth_answer_a">Ami</string>
    <string name="tenth_answer_b">Minako</string>
    <string name="tenth_answer_c">Michiru</string>
    <string name="tenth_answer_d">Rei</string>
    <string name="your_score">Your score</string>
</resources>
