<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.sailormoonquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/header" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_one"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/q1_answer_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_answer_a"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/q1_answer_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_answer_b"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/q1_answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_answer_c"
                android:textColor="@color/textColor"
                android:textSize="15sp" />


        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answer_a"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answer_b"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/q2_answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_answer_c"
                android:textColor="@color/textColor"
                android:textSize="15sp" />


        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_answer_a"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_answer_b"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/q3_answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_answer_c"
                android:textColor="@color/textColor"
                android:textSize="15sp" />


        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_four"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forth_answer_a"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/q4_answer_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forth_answer_b"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forth_answer_c"
                android:textColor="@color/textColor"
                android:textSize="15sp" />


        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_five"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_answer_a"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_answer_b"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/q5_answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_answer_c"
                android:textColor="@color/textColor"
                android:textSize="15sp" />


        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_six"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_answer_a"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_answer_b"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/q6_answer_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_answer_c"
                android:textColor="@color/textColor"
                android:textSize="15sp" />


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/question_seven"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/q7_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_eight"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/q8_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_nine"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:textStyle="bold" />
        <CheckBox
            android:id="@+id/q9_answer_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:text="@string/ninth_answer_a"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:text="@string/ninth_answer_b"/>
        <CheckBox
            android:id="@+id/q9_answer_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:text="@string/ninth_answer_c"/>
        <CheckBox
            android:id="@+id/q9_answer_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:text="@string/ninth_answer_d"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_ten"
            android:textColor="@color/textColor"
            android:textSize="17sp"
            android:textStyle="bold" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:text="@string/tenth_answer_a"/>
        <CheckBox
            android:id="@+id/q10_answer_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:text="@string/tenth_answer_b"/>
        <CheckBox
            android:id="@+id/q10_answer_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:text="@string/tenth_answer_c"/>
        <CheckBox
            android:id="@+id/q10_answer_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:text="@string/tenth_answer_d"/>

        <Button
            android:id="@+id/button_view"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="button"
            android:text="@string/results_button"
            android:textColor="#000000" />


    </LinearLayout>


</ScrollView>
